Re-implemented required changes
The changes allow running the benchmark with a scale of 100,000.
Furthermore the changes in common_benchmarks and common_spark are
required for the s2rdf scripts to work